test_suite/alan-2022-examples/failing/001030_mutation.alan
source b3 begin boolean Mr array relax end
